--- a/README
+++ b/README
@@ -1,4 +1,22 @@
-TOKENIZER AND VALIDATION FOR FIRST ORDER LOGIC.
-========
+# Logic Compiler
 
-This was an assignment for Formal Aspects of Computing (Aspectos Formais da Computação)de  of UNIFOR's PPGIA - Master degree in Applied Informatics Graduate Program.
+![alt=Logic Compiler](https://cloud.githubusercontent.com/assets/1095436/18411313/3d19c48a-774b-11e6-9744-b64a471b16d1.png)
+
+Minimum requirements
+=
+    - at least JVM 1.8
+
+How to use
+=
+Download the [latest stable realease](https://github.com/mariohd/LogicCompiler/releases) and run the JAR file.
+
+Grammar
+=
+    prop    ::= prop_variable | prop_op
+    prop_op ::= (~prop) | (prop ^ prop) | (prop v prop) | (prop -> prop)
+    prop_variable ::= [A-Z]
+
+
+The project
+=
+This was an assignment for Formal Aspects of Computing (Aspectos Formais da Computação) of UNIFOR's PPGIA - Master degree in Applied Informatics Graduate Program.
